# dnn-mode-connectivity-tf

./: .gitignore  LICENSE  README.md  config.toml  execute_config_custom.sh  execute_config_tf.sh  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
mode_connectivity/: architecture.py  argparser.py  curves.py  data.py  data_test.py  evaluate_curve.py  evaluate_curve_regression  evaluate_model.py  layers.py  logger.py  main.py  metrics_curve.py  net.py  plot_functions.py  train.py  train_regression.py  utils.py
mode_connectivity/curves/: curves.py  layers.py  net.py
mode_connectivity/custom_scripts/: evaluate_curve.py  evaluate_curve_classification.py  evaluate_curve_model.py  evaluate_curve_regression.py  train.py  (+4 more)
notebooks/: visualise_confusion_matrix.ipynb  visualise_confusion_matrix.py  visualise_curve.ipynb  visualise_curve.py  visualise_probabilities.ipynb  visualise_probabilities.py  visualise_regression.ipynb  visualise_regression.py
scripts/: evaluate_curve_classification.py  evaluate_curve_regression.py  evaluate_tensorflow.py  train_classification.py  train_regression.py  train_tensorflow.py
showcase/: argparser.py  data.py  utils.py
tests/: 02_test_PolyChain.py  03_test_BatchNormalization.py  04_test_CurveNet.py  CurveLayerTest.py  conftest.py  test_00_argparser.py  test_01_Bezier.py  test_02_PolyChain.py  test_03_BatchNormalization.py  test_04_CurveNet.py  test_05_CurveLayer.py  test_06_Regularizers.py  test_07_util.py  test_07_utils.py  test_BatchNormalization.py  test_Bezier.py  test_Conv2DCurve.py  test_Conv2DCurveLayer  test_CurveLayer.py  test_CurveNet.py  test_DenseCurveLayer  test_PolyChain.py  test_Regularizers.py  test_argparser.py  test_data.py  test_util.py  test_utils.py
visualisations/: evaluation_curve.py  metrics_curve_visualization.py  visualise_confusion_matrix.py  visualise_probalities.py  visualise_regression.py
(+19 files in other folders)
