[metadata]
name = mode-connectivity
version = 0.0.1
description = Implementation of mode connectivity for subspace inference.
author = Constantin v. Crailsheim, David Rundel, Amelie Loessl, Fabian Stermann
author_email = c.crailsheim@campus.lmu.de, david.rundel@campus.lmu.de, amelie.loessl@campus.lmu.de, fabian.stermann@campus.lmu.de
url = https://github.com/constantin-crailsheim/subspace_inference_tf

[options]
packages = mode_connectivity

[tool:pytest]
filterwarnings = ignore::DeprecationWarning:flatbuffer.*:
