[metadata]
name = mode_connectivity
version = 0.0.1
description = Implementation of subspace inference in TensorFlow based on PyTorch code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/constantin-crailsheim/subspace_inference_tf
author = Constantin v. Crailsheim, David Rundel, Amelie Loessl, Fabian Stermann
author_email = c.crailsheim@campus.lmu.de, david.rundel@campus.lmu.de, amelie.loessl@campus.lmu.de, fabian.stermann@campus.lmu.de
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = mode_connectivity
install_requires =
    keras>=2.9.0
    numpy>=1.22.4
    scipy>=1.8.1
    tabulate>=0.8.9
    tensorflow>=2.9.1
    tensorflow-datasets>=4.6.0
python_requires = >=3.7

[options.entry_points]
console_scripts =
    train = mode_connectivity.train:main

[tool:pytest]
filterwarnings = ignore::DeprecationWarning:flatbuffer.*:
